# PovertyCaddy

poor-caddy/: .gitignore  LICENSE  README.md
poor-caddy/cart/: CMakeLists.txt  README.md
poor-caddy/cart/main/: CMakeLists.txt  cart_config.hpp  main.cpp  odrive_protocol.cpp  odrive_protocol.hpp  odrive_types.hpp  odrive_uart.cpp  odrive_uart.hpp
poor-caddy/components/poor_caddy_protocol/: CMakeLists.txt
poor-caddy/components/poor_caddy_protocol/include/poor_caddy_protocol/: control.hpp  motor_logic.hpp  motor_policy.hpp  protocol.hpp  ramp.hpp  sequence.hpp  session_tracker.hpp
poor-caddy/components/poor_caddy_protocol/src/: control_logic.cpp  crc32.cpp  motor_logic.cpp  motor_policy.cpp  protocol.cpp  ramp.cpp  sequence.cpp  session_tracker.cpp
poor-caddy/components/poor_caddy_protocol/test/: test_control.cpp  test_motor_policy.cpp  test_protocol.cpp
poor-caddy/docs/: architecture.md  cart-state-transitions.md  odrive-commissioning.md  testing-plan.md  traceability.md  troubleshooting.md  wiring.md
poor-caddy/host_tests/: CMakeLists.txt  test_odrive_protocol.cpp
poor-caddy/wearable/: CMakeLists.txt  README.md
poor-caddy/wearable/main/: CMakeLists.txt  main.cpp  wearable_config.hpp
